# ChangeLog for dev-python/Babel
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/ChangeLog,v 1.64 2014/11/24 13:16:43 pacho Exp $

*Babel-1.3-r1 (24 Nov 2014)

  24 Nov 2014; Pacho Ramos <pacho@gentoo.org> +Babel-1.3-r1.ebuild:
  Support python 3.4

  31 Mar 2014; Michał Górny <mgorny@gentoo.org> Babel-1.3.ebuild:
  Add support for the new PyPy slotting.

  21 Jan 2014; Patrick Lauer <patrick@gentoo.org> -Babel-0.9.6-r1.ebuild,
  -Babel-1.2.ebuild:
  Remove old

  18 Jan 2014; Agostino Sarubbo <ago@gentoo.org> Babel-1.3.ebuild:
  Stable for alpha, wrt bug #490382

  29 Dec 2013; Akinori Hattori <hattya@gentoo.org> Babel-1.3.ebuild:
  ia64 stable wrt bug #490382

  23 Dec 2013; Agostino Sarubbo <ago@gentoo.org> Babel-1.3.ebuild:
  Stable for sparc, wrt bug #490382

  30 Nov 2013; Markus Meier <maekke@gentoo.org> Babel-1.3.ebuild:
  arm stable, bug #490382

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> Babel-1.3.ebuild:
  Stable for ppc64, wrt bug #490382

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> Babel-1.3.ebuild:
  Stable for ppc, wrt bug #490382

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> Babel-1.3.ebuild:
  Stable for x86, wrt bug #490382

  24 Nov 2013; Agostino Sarubbo <ago@gentoo.org> Babel-1.3.ebuild:
  Stable for amd64, wrt bug #490382

  11 Nov 2013; Jeroen Roovers <jer@gentoo.org> Babel-1.3.ebuild:
  Stable for HPPA (bug #490382).

  05 Sep 2013; Michał Górny <mgorny@gentoo.org> Babel-0.9.6-r1.ebuild,
  Babel-1.2.ebuild, Babel-1.3.ebuild:
  Clean up PYTHON_COMPAT from old implementations.

*Babel-1.3 (23 Aug 2013)

  23 Aug 2013; Dirkjan Ochtman <djc@gentoo.org> +Babel-1.3.ebuild:
  Version bump Babel to 1.3.

  07 Aug 2013; Michał Górny <mgorny@gentoo.org> Babel-0.9.6-r1.ebuild,
  Babel-1.2.ebuild:
  Drop removed Python implementations from PYTHON_COMPAT.

  27 Jul 2013; Dirkjan Ochtman <djc@gentoo.org> Babel-1.2.ebuild: