@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/Babel-1.3-r1.ebuild,v 1.1 2014/11/24 13:16:43 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/Babel-1.3-r1.ebuild,v 1.2 2014/11/27 11:58:44 idella4 Exp $
 
 EAPI=5
 
-PYTHON_COMPAT=( python{2_6,2_7,3_3,3_4} pypy pypy2_0 )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
 inherit distutils-r1
 
 DESCRIPTION="A collection of tools for internationalizing Python applications"
@@ -20,7 +20,7 @@ RDEPEND="dev-python/pytz[${PYTHON_USEDEP}]
 	dev-python/setuptools[${PYTHON_USEDEP}]"
 DEPEND="${DEPEND}
 	doc? ( dev-python/sphinx[${PYTHON_USEDEP}] )
-	test? ( >=dev-python/pytest-2.3.5 )"
+	test? ( >=dev-python/pytest-2.3.5[${PYTHON_USEDEP}] )"
 
 python_prepare_all() {
 	# Make the tests use implementation-specific datadir,
