@@ -5,14 +5,14 @@ AUX Babel-0.9.6-setuptools.patch 558 SHA256 9b6d2f600253aab873d9f123e0911c24a898
 DIST Babel-0.9.6.tar.gz 1820835 SHA256 4a3a085ecf1fcd2736573538ffa114f1f4331b3bbbdd69381e6e172c49c9750f SHA512 65a93a405f8734dba5e36bac62e574633214660667ba5b2a8c1120924a93fed84a2a5087127d20bd33e98fbd8400bb7634f56b27d5f6db574c81ee5fe10ee537 WHIRLPOOL 47c75b88cabd4ed08cd8be4c5e23d6c267e7681a279de8a9bee21c0e0fc8b4379ca519b797cb5245df774b0b816d680c0609cbd67d6e882e7dcb1f4149873c86
 DIST Babel-1.3.tar.gz 3401237 SHA256 9f02d0357184de1f093c10012b52e7454a1008be6a5c185ab7a3307aceb1d12e SHA512 3173d578c36d7a20d14ffcf6406ec9fe301e71a199069b3d2e53bd0c66e7f83d6e94f071dc08f2708202ec1ace4d14f4476234cc8347a37b05317302f0cfe0cf WHIRLPOOL fb48c95d0bdd775fa273f24236a05186f64b0e69a53ad99e2c4fa89b306d2d6c0856f72abe506b655baceaabe1fa481719e002c52188f4e01ead0a6f7057db00
 EBUILD Babel-0.9.6.ebuild 1018 SHA256 ec531b455da3a4752de0ff2f7817895204ed451d7e0ad168d3470e41b42ff97d SHA512 b83dc041d26c2aa77f164e1b5432d40559f37980224b8f7a4820d0351add0fd72d7c7adbfc2e0d7fe24a3789b99e15bf257aee7e9ee1c86ec6e660ba2b35ad54 WHIRLPOOL 9d19a2b35c0248b4795e49a502b17355b902a89030205dc638fa319cc80845585b0d3562562ec13b12a02247d868db6f289f11e3a848857c80c6b53a59c1c6b6
-EBUILD Babel-1.3-r1.ebuild 1558 SHA256 84e7f5e4073e54f5f534d77ca51573374109e778e39ca4b05253f38f6be7c4ab SHA512 c373238364c61473cf49d230039579c6ce943acdbcf5ec185b8cdb10330d22e24be05667d2bcd607d0b987b665b70c6ead3bcd550cbcdd7fcd0aea147bbf6f68 WHIRLPOOL ecbd6b23237d31d7971df98d34f28601e65dbe8d5f79511be8f899b47c9f51a29bee758b5026c9ead72f388dc8142f95a52fc650cae449ae8b768fb6df3b5dc6
+EBUILD Babel-1.3-r1.ebuild 1566 SHA256 2d2b0f2328979130611497643dae1152baff6cced2799cced4bc0257ad828e0b SHA512 0c0ad1a8c392673252786ac00d7e0e2d69c6410ec06ea720a84602b8d425ab66254896b42661cce587c17783450cdb5013070c0549c224d107eeb1f9c1987743 WHIRLPOOL 9a41b4e7065b23ed7f52fefefd75020fa4b456866bff16607f14c218c610d3eaa3361076ccc1d905ed54f6332f08a3e32b45e379464896534608924c2e8200bf
 EBUILD Babel-1.3.ebuild 1544 SHA256 7ba1e943590213a20a188e619423732250d261788e50576d458989a37e1e1984 SHA512 d5791db4d8982dc3b52315a09af18da0b6e19d2909f5b4169fafb4f7a44898e3175eda65dc5cab48514eb9a179ea93e51b7f8ae08a183f7e9847bf182e6013e1 WHIRLPOOL d79e4d0425aa3fe5f4d8b2b33c9cd4c70aec8002a33a830669abbbc7db0fc208ee10f7b767d569761ea1b79bf7a0178f1d66b7247187cefbf36225ed7cc9bca3
-MISC ChangeLog 6990 SHA256 85f0e7a2f8b58aff294d761ee4265cb246e447cc789a449eb1292950ade73d33 SHA512 f2ffa861c2778132e4006e93d9ffeed52d8a1756e27b95213a8a37ff676536d5e82b7c0d0cffbde2d0ce0ae42129bd98e7873dab141c8384d1e2dcb8afdf762b WHIRLPOOL 8e2b6ed047140652443283d4880cc3baeae5578aa6d575337ffac6b448f81922d276a5a48382604da27bb55f0cde7350248f4ce03f5d26ce1ea91a49d6f4fec6
+MISC ChangeLog 7093 SHA256 66aa25faa2b33e062537db4f47c0df7882eaf9acd4e255c393adc1d4fa184589 SHA512 063070ea1f882adfa87778433ac127e2a1bef6a0e593b3c0aa03a25ac52feb4486c5271c4cca9b32c360b46f1a4c193ce59af4f7871f7c6ef6b8b694573c270c WHIRLPOOL b8a29b6f416d53295034dce353a5a1676a8eebf4e2bc8c6a46989e6e0cab157b6035ec4c866943c2c177cd4d79c721e24edeb1fc4004ef3a09377d231be003da
 MISC metadata.xml 544 SHA256 440622fca3c402fbc09286c74c16417c07c5e36121881bac3e76477697d8c5c5 SHA512 cb1a716130a1076a9e132bead62c7d695d960b391c62b4353cb9793b0026aea2ea6e284c914fffd5ccac959a7cbe2e72ed9cc2c89ffccd36767142a69d8dd8ed WHIRLPOOL d9b4df1efeb27c399ea4c90b5ac119a13ec168dd0d1242312c4241846b802c83cd67b8a2700c74036921bc2694aa2aedbc810407e732c8984f5f9f2eb4425c4b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEUEAREIAAYFAlRzL7wACgkQCaWpQKGI+9TQ2QCdExXG54OIxRJ81DLnkXzfcPsm
-VUIAmKzNo4LRSdqvAryjn9B3HEqimag=
-=S/6A
+iEYEAREIAAYFAlR3EgUACgkQso7CE7gHKw0qDQCfcFlUl7FQ1kvoF/8qqvB2X080
+pOUAoJAayH6UVHh0oL9ufLY0H1d0o84u
+=m1cp
 -----END PGP SIGNATURE-----
