@@ -5,14 +5,14 @@ DIST Whoosh-2.4.1.tar.gz 938446 SHA256 466c377ae8567aed86abef401774ddb27e80055ac
 DIST Whoosh-2.5.7.tar.gz 1040760 SHA256 450d3b76c45dd26ceda101ebafee181c7ab377e8ea37ff5aaca1be79227f73fa SHA512 e37a9d2c65d993432c145d8e8eaeff793028ec0691fa62705e31cd4b1bc325947f1b457e451fce867eafb6a7cc58f6397c6cde3cfe088eecd3680b68e2345ea9 WHIRLPOOL 38f3f4c5f7c1513632e9d7c671020c28654606e0f7366a46d90767eaba859a9d30cc156326a457310c577e025673047e13c1f9eda490141e0368c487e29ad8b0
 DIST Whoosh-2.6.0.zip 1193541 SHA256 7de7bc4d00a6d051dbb360b48eb7f3cd002373d87252fb0b284a3c9c453a7677 SHA512 e50e47ec0d1c65ad3c7d657586f5380a1be748945c1ce964305fa68b99379f0da676faef6f0ca45ef151df7be71150601162ee966f3aaf84047a20bca36f7e37 WHIRLPOOL c42e9760833db7186f3df5946f6dd071288cfccf2eaefba95520a2415ca377c49cf74307b3fa2c9e655f134b086ae637e5db06330248b4a27e12175920f3c7b8
 EBUILD whoosh-2.4.1.ebuild 871 SHA256 61806cad05611f0a59862eae7a9fc729397e5d39d708e1dd7da21b866d15ec1a SHA512 406533bdb3f715a9378fae927e8c8f14c5311ca0034a640d0e79c5117b02e82ff1e00a86738bdb0c3641a98ed6e6c1b48dec7a7dea951ead8b0e6df6921eaddd WHIRLPOOL 18e9ba42eeea70f61698a4798f7518d23ff652a52406078bd84dea76f9ad066becefb7e262a390364836e87fb883a282e302c7a1c47b5b32df4bb56cffaf45cf
-EBUILD whoosh-2.5.7.ebuild 1070 SHA256 022fce1c46dfdaa6b7ceb01957eb6b153bb81d0cde5b2417864d1b31859af47e SHA512 ae75c9d0920ed532d65f5bed4cd86cd93f6aaac176b863063f54832415f5c5b181fdf039d33c9122d3782379aef99b8cfed2238f3d76bf78c9a8c3a0f16bbeac WHIRLPOOL 7cc813382b0fced44315ef3aefec6b74d89f7175c03c33cc54115f03a0c881eeced6e4fac829ad71f71ddcea2be5a766eeb448cb37800aa3096d5cf3e73940ef
+EBUILD whoosh-2.5.7.ebuild 1066 SHA256 32a369a9246503ce6962994b9ee15b7edb7d9cd5d2b8a57536546afd26ea37bc SHA512 1663767ca161c46d9f2b1133f36c2c82d9a74d406178bcfbe768af0683f2c9073a2fab9edef581d013fa3667a7daee175e9075412a5f97c5a8de6d5c22c18ffd WHIRLPOOL d87a5a5fb40c09d5ea97ff508307ae16854cb7bb720e2221c7830b62aa5e9dd30e225957c53841f18e240129689596f9ffd9520bfca3ee6b3fc2fe8aa34e8dae
 EBUILD whoosh-2.6.0.ebuild 1505 SHA256 b3e4ade8327d78f597132b0ebd68a8e8750dfb47b4e1fbead405787441890c08 SHA512 c388f9cda4695ec638c1225c0017d3822e493a6cc3ea249f41e26062021d2b45acc2b76668762e4e923430f7f110a7b9d0a78abec4dc09ac134d0ebd12a628ab WHIRLPOOL 52ea28795b51fde5b00d09a6774f4571e29d571e0160a18b3dc110397e22c3780e423903ea0eefa2eecfdf37f3e6f04aefefdff4bbee6bc8eabf12b114540c4d
-MISC ChangeLog 5894 SHA256 4a2e5c151aeedf9ee814a7e4be29a4073f7a29886889685dc97cb7f2514aa8c0 SHA512 059fa8b4c192cd2e068710e5ed27d500ebf98ff22a5ff13942c7fb2867f96457e789d20f9c6e43002135ac3b4674998933b1243ff721bdcd57dbc447886652ee WHIRLPOOL 6320fef9d7fd525dea8cb2ea8d5d9fc8f49dcf13cad135a3d6c3b3c1b907a6769fc7cb28ef0a95eed81ba39bd275cdfaa860910c4de06e9feab6fab86d32711a
+MISC ChangeLog 5988 SHA256 d1cd92e6ed0832f3c6367a997ab09ff401b707ebb1b2a5bf695a38e039e983c9 SHA512 8adc41bfed9911baa7449864a4c5b32f0050834d7acc4713ccae7709181d9dc8f0a2f346a725878c702cfb06e90b180d9a0f03f36e9876072ec7b2b39a73e91c WHIRLPOOL 1e170dfdd747a7b84d1141fd4c6871919427c5022d1ec7b2d215096a3033d9130710532aab2b169967a9598b55d7b9501daf657687f4a45828e086977b2fe250
 MISC metadata.xml 726 SHA256 8d921efa970379ff88325e6eb1621d0362031a8e63b41c3263022647774838d2 SHA512 f33d5453ed385fe4ff89eb23e46b840ebee93c9d8cca1eb4d4f818083fa40ae2fd5cf2d317f04c83ea414472699ec628182985029fd362a729bfa4c886cf98df WHIRLPOOL cc8b11eebb75a592d77ee606a6fdf875ea24044f852fe36e951d24ba20bd0d7ff077508ea2c8b7c6a1ef4acad14adcea334243790ed14c0650f0632da84d1416
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRlgXAACgkQso7CE7gHKw3XogCgqzN6W81N5S7uNoCtcyguL3J2
-HOAAoInN8Y4PdeA8xUS7UluB0J0OU8QS
-=Eovu
+iEYEAREIAAYFAlR3D5AACgkQso7CE7gHKw1N7ACeKzjmuNq1xQRdZrjH4944TgDp
+cugAoKE+WHnuEBE7TMkcrzE2oJ1GW69w
+=Meh5
 -----END PGP SIGNATURE-----
