@@ -1,10 +1,10 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/whoosh/whoosh-2.5.7.ebuild,v 1.3 2014/07/27 01:23:42 idella4 Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/whoosh/whoosh-2.5.7.ebuild,v 1.4 2014/11/27 11:48:16 idella4 Exp $
 
 EAPI="5"
 
-PYTHON_COMPAT=( python{2_7,3_2,3_3,3_4} pypy )
+PYTHON_COMPAT=( python{2_7,3_3,3_4} pypy )
 
 MY_PN="Whoosh"
 
