@@ -1,10 +1,31 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX kdm-4-gentoo-xinitrc.d.patch 793 SHA256 7ddeaa5b5446ed9e4f94cfc474032ee7d450df3748b378a4803c5b7b2bdce684 SHA512 fdb41ce7f3e8e9b0874f4f897799f270cea6e66cc36f5d006f954dabfff591f045160161b4426288886f3d28fdfd0e8474bc3d29b9d440533589bfbbd546e512 WHIRLPOOL cf030921b2b782217feedc997249af10f8ff074a214ccceb18eb6f842c87164318a849736b6df13c816f6f428e4a2281082a08dcfcee83523e8d65d17d9ed929
 AUX kdm-4.11.9-desktopnamescrash.patch 1288 SHA256 f49ad9697e285b98ab0874f188005ebbfcd84ac3b0d5ef7397fd3fcbf9cb7652 SHA512 b70b872005ccd98658d62fecd3c27b3bcc8a79146faa3038d1942113b6a05afe5c41052eca4d4337d2de4df3d8509777d49e7cdb169cb94f6ef155cc275f4d64 WHIRLPOOL cf1218a02b8aab4564de4f128a205598d4308ad9088581227582ec84d3d61c5c6555720d021cc8c635288c01689e11d07acd001e663a1f66c05d19f76117f9ac
 AUX kdm-logrotate 111 SHA256 516523c6db0b85d33f0a90d284e707ed4d2ba426b154872af2e8e9389e4ef089 SHA512 2dfa62caee22323e43d159c88273e05eb5932eaf45b1c7067494833bd08310e4e8f5e03b149a40ed365b45c263e62c41f7c6ec088148f66d74779680838ee8e9 WHIRLPOOL aade065ca462bb9788e410c66295e4492b4025d85486396eff375b05d213df54ef9a0ddb26e8c758de2e1ae3a42ea25e7bd5089fb528cb2afeaadd88b11c685a
 AUX kdm.service 262 SHA256 0ef99310cc6527fa49a81fc227f521d44347f3333ef6dd226f17b84e4120c003 SHA512 4a8cbf8398f1c72a7f1497bd08e3eb2118de0b7259cbcc0bf9200a01fed0a2769e10d6ecfc0938efb90e581df68bb0003678be072034ffe0daae256f598f2e17 WHIRLPOOL 171698de9503798655503ca998ff51ffe1d2177fbb542218b64e36991177cb5043cbf85df847d82441028efef251719c7a67220ea16f9387e9eaa09b13ccf722
 DIST kde-workspace-4.11.14.tar.xz 13529808 SHA256 cf20a562f3abf848ab0e122d6af1971dcc6383b91565f6da21f46f1011386e01 SHA512 203a5ffe1eea6f6d3e70fdcded0ac1fc86f76f8a175c043beddb5cbfaa865a07d53b6c1be55d63f4ff47946757267f390318cfad41bb0006f10462e8ec47dea7 WHIRLPOOL dd91f268701de19108eac235a12047aabf319189ce927dea1a60450183878ed454110b4a9d5bfa9613fa7732c8ac7f1344dc8cbc2d12d0b29c42b05e725183a2
 DIST kde-workspace-4.11.9.tar.xz 13536252 SHA256 aa3d12a264e7fcb6c1330e800b9c7d43c00277275d182824d42f9fe1def0c0cf SHA512 9f4292144981a94ccd9cfcd9a70ce673c3212c9962cce049668b15b86c5a037dfe0a4b0acfa4ad0c4c2902ded2b17521cbcff7e2411af7efb4c05af5b9465c81 WHIRLPOOL 26327aaee0ac92a6d8f9d9981b1f1cd4d2090d1124a7435301c55287228b57dba1f50814753abb468080787514ed19a60099ede0764d1bc09e76d948f1360879
-EBUILD kdm-4.11.14.ebuild 4437 SHA256 c000954ad1d7d0a8fd14046a83719f100c10f229a1b547fe729c8f6fa91a044c SHA512 f4069d5f107024ed529b84a7f3a51c984a174e287fe8611065ac7511a0ba5bdaff957daf9fea5779d13eec1fd8eb59c63125eeca39629d80e6f6e2eab5a85f68 WHIRLPOOL c2794498bf4f87e237d83cc7629fa25efeb5746c8405cac5259634b952d2b481a17df8c1c90e25f3f308d76b8a62bfcdbef0bf175f0e76a1ad7339f6e367da92
+EBUILD kdm-4.11.14.ebuild 4474 SHA256 7527e5673975c9ecc30090ebf78616a81123c795905b4d924729826937e5f673 SHA512 6f2b170c0ce93dfee39f0ef56f2c380100197ad37ca27f320bc8848ed0c23cd9859a7fda275f973bb4402c1d26afd3fddad91b9e4cfa1ee63bbfe797fc26bbfe WHIRLPOOL 04583db5623f5fc2fc25f70a7050d9276aaeb434366473ad2677ac5283b2bb3c171db8522fe9b2d1438cfa2cbf1637934ea39561727f6c4e489b88f5e8903900
 EBUILD kdm-4.11.9-r1.ebuild 4479 SHA256 87bad6142c9d273c8769bfe0f887e8d92454487c0ef2d4e227dac88b65ea77d1 SHA512 7abbfda5d59b80b22158e7f8de4bb3e152f408baa01e689eea9630683cc936a33e7ea4957aba757b1d049112dcbc77c50f7d077ef21a2ae67a2d31ab6f534750 WHIRLPOOL 5bb88af102787450e9e4f120d8c1d2e8eb956aa88e2ff4aed1557b9b00dfcd89ae64cc62d4e2cddca97335d2c2db0b54d6fdd9b2163e4b34a16ef5c9a0f57392
-MISC ChangeLog 52557 SHA256 a21684d9db2dcdc8fef10f6bacad9c1a4511e4ef3ef2d7dfcaf0938450296ec4 SHA512 af52de9c7a796fe2033ff63280e0dbf784ae7dc388df7a75893df6b6543f565f6dfa9bf5eb63c8d8fccabf0b4f34455937b658fac8522de7166120ff79386558 WHIRLPOOL ce7e80721a2acb434b421f91a7b68966509059fc2e7e82197aec3f65a4f17f1b0921a6fbcded00186bbfdf78bc7423dac6898c693cde63dff73e34b3ef01da8c
+MISC ChangeLog 52682 SHA256 6b71893185aa6e121aca752c16eadd044f20796dbc786fa06e17730dd9307c05 SHA512 bebb5520869a02f630d0a3461028354f41cff033a24a84e39dbf608c06e44311f7e345dd6a3d08f2688d6fbc3d184facbc2bf27bde8d13def71ef85111e0b292 WHIRLPOOL 6b1b08d485f9c0514be57da91098101c9ebc0044c4f5eeb27a832d5c6786c73b00874b7c2ffad3e186a7744c37ee54ff401b707eea4636ae92ce2bdfe03c68d2
 MISC metadata.xml 253 SHA256 955ffc185b3b01315be94542ea43ae1180d5f61ea539a317c45c5746b463eeba SHA512 06787f52d5746dd3d5549c5fa2094f178e471c2684ec15b3e958ce0c36e84c2cc46156f688eb5f4ae7ab7802401d6e9208126dbea30aea81437848a6b8dc8eb6 WHIRLPOOL 134a8c5cd7eb97f9d9b75f95183a92d8b8c57bfbb840de26eb9df1d74468dbef47ab4714bccd9109cde2a11354ba34ea78edb7578312c530656cfab8ba03ecfe
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0
+
+iQJiBAEBCABMBQJUdxCERRSAAAAAABQAKGlzc3Vlci1mcHJAbm90YXRpb25zOTc5
+MTY5NkQ3RDM3NkRBN0U5QjZGMTUwMDZCMUYzOERDQTQ1QTFFQwAKCRAGsfONykWh
+7DAlD/9+gVB+7SuHmEZ3kjoUOYDNaX+PthX38NSbEpm7omu7HR2fp9H1f1H8Ke6c
+vD04mcdZC1U8G+CyqD43xjSQc0LnLP8FiwDjt9CajVwVYLVUtXNWamiY8/ENPBK3
+oPK92eJYUpQNt/uKzqZBb0OOx1WECyaOjTinma9yjO/i1Ai7CIydZRpA4tv8ZQx5
+/9qPir/C25bO48FooWenvMCTnKQ7cnlcj7R5Yy5nJ5K5y4L77tujnQFIaY+EduuW
+UzzN3J+ce2/urG3HykgAY7F4VSGXo060eX9qglweO1V0pZqWE0aRwwWys7WpLaU3
+UllvrI2lDtYv3+x4jO1IiggSB+pAoSWvHyO2DYFWt10ja1eMouK1ZqdD2gdnq6fG
+GJkum4DszXUqH5H4eSt3sMl2y+D59zS+u/Tvl48XSV37LDDPo2ZASR/kwP8pOX0x
+q7Id+YYPEyo5CZNx8u7WpRc8Ma3++3zQw2rT7MU6Ms25MUb/V9ch4Hb/KS7RWvma
+tfKaQs8jE1e2xSOABll/d8iHlDL/8zJkFzeA97cIODXjNJOUSTkqR0w4baPnK3HJ
+fgbWdM9TWNzcA3SrzTdl4jqPc58E/16c/p0AuGzUWBqV3osVJSnRGj/B1RZoInzN
+qxw/pWQuxdNX66GgtSea/WNDGLDF1rGzV00jWdmxmanrRzcLmA==
+=NZtX
+-----END PGP SIGNATURE-----
