@@ -11,4 +11,4 @@ REQUIRED_USE=consolekit? ( !systemd ) systemd? ( !consolekit )
 SLOT=4/4.11
 SRC_URI=mirror://kde/stable/4.14.3/src/kde-workspace-4.11.14.tar.xz
 _eclasses_=cmake-utils	e2cc76ea65ae78da8e4696dad93f5d29	eutils	6faef4c127028ccbba3a11400d24ae34	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	eda1c0b5ba85b3eeb555a071d69eb819	gnome2-utils	5cdfd22a2163c9d3a891648bd19453a7	kde4-base	43b17a554a1ca67f0eab47ca0e5ef709	kde4-functions	492237eb2823bdc02bc769530501f0ea	kde4-meta	43baa369240a27d6bc794953b4b07f66	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	systemd	090342761f573a8280dd5aa6b0345f3b	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=6a9d6a3d47f212482ac12f58c96ec577
+_md5_=b1748af6ed80914292b8d11c0e0404b7
