@@ -1,6 +1,9 @@
 # ChangeLog for kde-base/kdm
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/kdm/ChangeLog,v 1.410 2014/11/14 19:33:06 mrueg Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/kdm/ChangeLog,v 1.411 2014/11/27 11:52:18 kensington Exp $
+
+  27 Nov 2014; Michael Palimaka <kensington@gentoo.org> kdm-4.11.14.ebuild:
+  Restrict parallel build wrt bug #413811.
 
   14 Nov 2014; Manuel Rüger <mrueg@gentoo.org> -kdm-4.11.13.ebuild:
   Cleanup old.
