@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/Babel
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/ChangeLog,v 1.64 2014/11/24 13:16:43 pacho Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/Babel/ChangeLog,v 1.65 2014/11/27 11:58:44 idella4 Exp $
+
+  27 Nov 2014; Ian Delaney <idella4@gentoo.org> Babel-1.3-r1.ebuild:
+  clean old python impls, tidy
 
 *Babel-1.3-r1 (24 Nov 2014)
 
